--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ section{
     color: #fff;
     min-height: 500px;
     background-size: cover;
+    background-position: center;
     background-attachment: fixed;
     font-family: 'Ubuntu', sans-serif;
 }
